change java version to 17 lts